--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 :root {
   background-color: rgb(74, 74, 74);
 }
@@ -5,4 +9,43 @@
   width: 90%;
   margin: auto;
   background-color: rgb(74, 74, 74);
+}
+
+button {
+  padding: 5px 10px;
+  font-size: 1.1rem;
+  border-radius: 10px;
+  border: 2px solid transparent;
+}
+
+button:hover {
+  border: 2px solid rgb(72, 78, 250);
+}
+
+.swiper {
+  width: 100%;
+  height: 100%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: rgb(74, 74, 74);
+  height: calc((100% - 30px) / 2) !important;
+
+  /* Center slide text vertically */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+@layer components {
+  /* hover effect Card */
+  .hoverEffect {
+    border: 2px solid rgb(230, 228, 228);
+    transition: 1s ease;
+    background-color: rgb(99, 99, 99);
+  }
 }
