--- a/src/index.css
+++ b/src/index.css
@@ -11,17 +11,6 @@
   background-color: rgb(74, 74, 74);
 }
 
-button {
-  padding: 5px 10px;
-  font-size: 1.1rem;
-  border-radius: 10px;
-  border: 2px solid transparent;
-}
-
-button:hover {
-  border: 2px solid rgb(72, 78, 250);
-}
-
 .swiper {
   width: 100%;
   height: 100%;
@@ -43,9 +32,17 @@ button:hover {
 
 @layer components {
   /* hover effect Card */
-  .hoverEffect {
-    border: 2px solid rgb(230, 228, 228);
-    transition: 1s ease;
-    background-color: rgb(99, 99, 99);
+  .SlideEffect {
+    animation: slide 1s ease;
+  }
+
+  @keyframes slide {
+    0% {
+      transform: translateY(-50%);
+    }
+
+    100% {
+      transform: translateY(0%);
+    }
   }
 }
